--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,8 @@ Django==4.1.1
 django-cors-headers==3.13.0
 djangorestframework==3.14.0
 gunicorn==20.1.0
-psycopg2-binary==2.9.3
+# psycopg2-binary==2.9.3
+psycopg2==2.7.3.2 --no-binary psycopg2
 pytz==2022.2.1
 sqlparse==0.4.3
 whitenoise==6.2.0
