--- a/requirements.txt
+++ b/requirements.txt
@@ -25,9 +25,9 @@ gunicorn==20.1.0
 idna==3.4
 jmespath==0.10.0
 jsonschema==3.2.0
+mysqlclient==2.1.1
 paramiko==2.11.0
 pathspec==0.9.0
-psycopg2-binary==2.9.3
 pycparser==2.21
 PyNaCl==1.5.0
 pyrsistent==0.18.1
