--- a/requirements.txt
+++ b/requirements.txt
@@ -28,7 +28,9 @@ jsonschema==3.2.0
 mysqlclient==2.1.1
 paramiko==2.11.0
 pathspec==0.9.0
+psycopg2-binary==2.9.3
 pycparser==2.21
+PyMySQL==1.0.2
 PyNaCl==1.5.0
 pyrsistent==0.18.1
 python-dateutil==2.8.2
